feat(arch): adopt Java 21 + Quarkus 3.x + LangChain4j on k3s OCI ARM node